--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Math Explorer</title>
 		<meta charset="utf-8">
+		<link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
 		<link rel="stylesheet" type="text/css" href="game.css">
 	</head>
 		<div class = "start">
