--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Math Explorer</title>
+		<link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
 		<link rel="stylesheet" type="text/css" href="home.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
